Demo Packs/Intake Builder Pack/force-app/main/default/objects/Intake_Question__c/Intake_Question__c.object-meta.xml
<CustomObject>
    <label>Intake Question</label>
    <pluralLabel>Intake Questions</pluralLabel>
    <nameField>
        <label>Question Number</label>
        <type>AutoNumber</type>
        <displayFormat>IQ-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Single question within an Intake Template.</description>
</CustomObject>