Demo Packs/Intake Builder Pack/force-app/main/default/objects/Intake_Question__c/fields/AI_Extraction_Hint__c.field-meta.xml
<CustomField>
    <fullName>AI_Extraction_Hint__c</fullName>
    <label>AI Extraction Hint</label>
    <type>LongTextArea</type>
    <length>2000</length>
    <inlineHelpText>Optional guidance for the AI when pulling this answer from a transcript.</inlineHelpText>
</CustomField>