Demo Packs/Intake Builder Pack/force-app/main/default/objects/Intake_Question__c/fields/Answer_Type__c.field-meta.xml
<CustomField>
    <fullName>Answer_Type__c</fullName>
    <label>Answer Type</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value><fullName>boolean</fullName><default>false</default><label>Checkbox</label></value>
            <value><fullName>date</fullName><default>false</default><label>Date</label></value>
            <value><fullName>email</fullName><default>false</default><label>Email</label></value>
            <value><fullName>lookup</fullName><default>false</default><label>Lookup</label></value>
            <value><fullName>multipicklist</fullName><default>false</default><label>Multi-Select Picklist</label></value>
            <value><fullName>number</fullName><default>false</default><label>Number</label></value>
            <value><fullName>phone</fullName><default>false</default><label>Phone</label></value>
            <value><fullName>picklist</fullName><default>false</default><label>Picklist</label></value>
            <value><fullName>text</fullName><default>true</default><label>Text</label></value>
            <value><fullName>textarea</fullName><default>false</default><label>Text Area (long)</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>