Demo Packs/Intake Builder Pack/force-app/main/default/objects/Intake_Question__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Text</type>
    <length>120</length>
</CustomField>