Demo Packs/Intake Builder Pack/force-app/main/default/objects/Intake_Question__c/fields/DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>DeveloperName__c</fullName>
    <label>Developer Name</label>
    <type>Text</type>
    <length>120</length>
    <required>true</required>
    <inlineHelpText>Stable key used for the AI extraction map and answers JSON. Letters, numbers, underscores only.</inlineHelpText>
</CustomField>