Demo Packs/Intake Builder Pack/force-app/main/default/objects/Intake_Question__c/fields/Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Help_Text__c</fullName>
    <label>Help Text</label>
    <type>LongTextArea</type>
    <length>1000</length>
</CustomField>