Demo Packs/Intake Builder Pack/force-app/main/default/objects/Intake_Question__c/fields/Intake_Template__c.field-meta.xml
<CustomField>
    <fullName>Intake_Template__c</fullName>
    <label>Intake Template</label>
    <type>MasterDetail</type>
    <referenceTo>Intake_Template__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
</CustomField>