Demo Packs/Intake Builder Pack/force-app/main/default/objects/Intake_Question__c/fields/Lookup_Object__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Object__c</fullName>
    <label>Lookup Object</label>
    <type>Text</type>
    <length>120</length>
    <inlineHelpText>For Lookup answer types: SObject API name to search.</inlineHelpText>
</CustomField>