Demo Packs/Intake Builder Pack/force-app/main/default/objects/Intake_Question__c/fields/Picklist_Source__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Source__c</fullName>
    <label>Picklist Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Static</fullName><default>true</default><label>Static (manage values on this question)</label></value>
            <value><fullName>From_Field</fullName><default>false</default><label>From Field (pull live picklist from a Salesforce field)</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>