Demo Packs/Intake Builder Pack/force-app/main/default/objects/Intake_Question__c/fields/Picklist_Source_Field__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Source_Field__c</fullName>
    <label>Picklist Source Field</label>
    <type>Text</type>
    <length>120</length>
    <inlineHelpText>Field API name on the source object whose picklist values to use.</inlineHelpText>
</CustomField>