Demo Packs/Intake Builder Pack/force-app/main/default/objects/Intake_Question__c/fields/Picklist_Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Source_Object__c</fullName>
    <label>Picklist Source Object</label>
    <type>Text</type>
    <length>120</length>
    <inlineHelpText>SObject API name to pull picklist values from when Picklist Source = From Field.</inlineHelpText>
</CustomField>