Demo Packs/Intake Builder Pack/force-app/main/default/objects/Intake_Question__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <label>Required</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>