Demo Packs/Intake Builder Pack/force-app/main/default/objects/Intake_Question__c/fields/Target_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Field_API_Name__c</fullName>
    <label>Target Field API Name</label>
    <type>Text</type>
    <length>120</length>
    <inlineHelpText>Field on the template's Target Object that this answer writes to.</inlineHelpText>
</CustomField>