Demo Packs/Intake Builder Pack/force-app/main/default/objects/Intake_Question__c/fields/Validation_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Validation_Error_Message__c</fullName>
    <label>Validation Error Message</label>
    <type>Text</type>
    <length>255</length>
</CustomField>