Demo Packs/Intake Builder Pack/force-app/main/default/objects/Intake_Question__c/fields/Validation_Regex__c.field-meta.xml
<CustomField>
    <fullName>Validation_Regex__c</fullName>
    <label>Validation Regex</label>
    <type>Text</type>
    <length>255</length>
    <inlineHelpText>JavaScript regular expression. Submission is blocked until the answer matches.</inlineHelpText>
</CustomField>